# unlimited-pedantix

./: .gitignore  CLAUDE.md  README.MD  main.py  pyproject.toml  requirements.txt
data/: words_fr.txt
src/: classes.py  config.py  display_article.py  embedding_utils.py  game_logic.py  main.py  session_state.py  text_utils.py  ui.py  ui_components.py  ui_utils.py  web_viewer.py  wiki_api.py
src/game/: classifier.py  embedding_utils.py  game_logic.py  wiki_api.py
src/ui/: display_article.py  ui_components.py
